# stc-mixhop

./: .gitignore  CHECKED_RUNS.md  FEMA_DATA_NOTE.md  FEMA_REMOVAL_NOTE.md  README.md  REVISION_CHECKLIST.md  pyproject.toml  requirements.txt  run_experiment.py
data/: README.md
scripts/: check_fema_policy_file.py  run_revision_paysim.sh  run_sender_only.sh
src/stcmixhop/: __init__.py  baselines.py  data_ingest.py  graph_build.py  models.py  plotting.py  stats.py  train.py
tests/: test_smoke.py
